# rustc_codegen_clr

./: .gitignore  BROKEN_TESTS.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-Apache  QUICKSTART.md  README.md  autotest.rs  build_all.sh  caller_location  clr64-unknown-clr.json  clr64-unknown-mono.json  latest_benchmarks.txt  makefile  native_benchmark.txt  res.txt  rust-toolchain.toml  rustc_codegen_clr.sln  setup_rustc_fork.sh  target.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: miscompilation.md
.github/workflows/: rust.yml
AssemblyUtilis/: AssemblyBuilderRef.cs  AssemblyUtilis.csproj  ManagedHandle.cs  RustString.cs  TypeDef.cs
cargo_tests/benchmarks/: .gitignore  Cargo.toml  Eqivalent.cs  Eqivalent.runtimeconfig.json
cargo_tests/build_alloc/: Cargo.toml
cargo_tests/build_core/: Cargo.toml
cargo_tests/build_std/: Cargo.toml
cargo_tests/criterion/: Cargo.toml
cargo_tests/fastrand_test/: Cargo.toml
cargo_tests/glam_test/: Cargo.toml
cargo_tests/glam_test/src/: main.rs
cargo_tests/guessing_game/: Cargo.toml
cargo_tests/hello_world/: .gitignore  Cargo.toml
cargo_tests/rapier/: Cargo.toml
cargo_tests/spinacz/: Cargo.toml
cargo_tests/std_hello_world/: Cargo.toml
cargo_tests/string_tests/: Cargo.toml
cilly/: Cargo.toml
cilly/src/: access_modifier.rs  asm.rs  asm_exporter.rs  assembly.rs  basic_block.rs  bimap.rs  bob.runtimeconfig.json  c_exporter.rs  c_header.h  call_site.rs  cil_iter.rs  cil_iter_mut.rs  cil_node.rs  cil_root.rs  cil_tree.rs  dotnet_type.rs  entrypoint.rs  field_desc.rs  fn_sig.rs  ilasm_exporter.rs  ilasm_op.rs  intercow.rs  interns.rs  lib.rs  libc_fns.rs  method.rs  static_field_desc.rs  type.rs  type_def.rs  utilis.rs
cilly/src/c_exporter/: c_header.h  method.rs  mod.rs  varaible.rs
cilly/src/js_exporter/: defines.js  mod.rs
cilly/src/v2/: access.rs  asm.rs  asm_link.rs  basic_block.rs  bimap.rs  cache.rs  cilnode.rs  cilroot.rs  class.rs  cst.rs  field.rs  float.rs  fnsig.rs  hashable.rs  int.rs  iter.rs  macros.rs  method.rs  method_builder.rs  mod.rs  strings.rs  tpe.rs  typecheck.rs
cilly/src/v2/builtins/: atomics.rs  casts.rs  math.rs  mod.rs  select.rs  softfloat.rs  thread.rs
cilly/src/v2/builtins/f16/: mod.rs
cilly/src/v2/builtins/int128/: mod.rs
cilly/src/v2/builtins/simd/: binop.rs  eq.rs  mod.rs
cilly/src/v2/c_exporter/: c_header.h  mod.rs  utilis.rs
cilly/src/v2/cillyir_exporter/: mod.rs
cilly/src/v2/il_exporter/: mod.rs
cilly/src/v2/java_exporter/: mod.rs
cilly/src/v2/opt/: inline.rs  local_usage.rs  mod.rs  opt_fuel.rs  opt_node.rs  root.rs  side_effect.rs  simplify_handlers.rs  test.rs
cilly/src/v2/tpe/: float.rs  int.rs  mod.rs  simd.rs
dotnet_aot/: Cargo.toml
mycorrhiza/: .gitignore  Cargo.toml  README.md  rustc-ice-2024-02-22T18_52_48-41079.txt  rustc-ice-2024-02-22T18_52_49-41505.txt  rustc-ice-2024-02-22T18_52_49-41587.txt  rustc-ice-2024-02-22T18_52_50-41955.txt  rustc-ice-2024-02-22T18_52_54-42706.txt  rustc-ice-2024-02-22T18_52_55-42974.txt  rustc-ice-2024-02-22T18_52_57-43884.txt  rustc-ice-2024-02-22T18_52_58-44323.txt
mycorrhiza/src/: bindings.rs  class.rs  intrinsics.rs  lib.rs
mycorrhiza/src/std/: mod.rs  vec.rs
mycorrhiza/src/system/: mod.rs
mycorrhiza/src/system/console/: mod.rs
mycorrhiza/src/system/diagnostics/: mod.rs
mycorrhiza/src/system/runtime/: mod.rs
mycorrhiza/src/system/runtime/interop_services/: mod.rs
mycorrhiza/src/system/text/: mod.rs
rustc_codegen_clr_call/: Cargo.toml
rustc_codegen_clr_call/src/: lib.rs
rustc_codegen_clr_ctx/: Cargo.toml
rustc_codegen_clr_ctx/src/: lib.rs
rustc_codegen_clr_place/: Cargo.toml
rustc_codegen_clr_type/: Cargo.toml
rustc_codgen_clr_operand/: Cargo.toml
rustc_codgen_clr_operand/src/: constant.rs  lib.rs  static_data.rs
src/: access_modifier.rs  aggregate.rs  alloc_erorr_hook.rs  allocation.rs  assembly.rs  assigment_target.rs  base_ir.rs  basic_block.rs  binop.rs  call_info.rs  casts.rs  checked_binop.rs  cil_op.rs  clr_method.rs  codegen_error.rs  compile_test.rs  comptime.rs  config.rs  constant.rs  entrypoint.rs  fn_ctx.rs  function_sig.rs  interop.rs  lib.rs  libc.il  libc.rs  method.rs  native_pastrough.rs  operand.rs  place.rs  projection.rs  rvalue.rs  statement.rs  static_data.rs  stdlib.rs  terminator.rs  type.rs  type_def.rs  unop.rs  unsize.rs  (+2 more)
src/assembly_exporter/: mod.rs  (+5 more)
std/: Cargo.toml
test/: .gitignore  assign.rs  autodiff.rs  binops.rs  branches.rs  calls.rs  casts.rs  closure.rs  common.rs  empty_string_slice.rs  enums.exebackup  enums.ilbackup  fn_ptr.rs  fuzz50  gdb  hello.rs  identity.rs  libc.rs  nbody  nbody.rs  recursive.rs  references.rs  structs.rs  tuple.rs  types.rs
(+347 files in other folders)
