[package]
name = "rustc_codegen_clr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
repository = "https://github.com/FractalFir/rustc_codegen_clr"
[dependencies]
ar = "0.9.0"
bytecount = "0.6.8"

lazy_static = "1.4.0"
libc = "0.2.153"
libloading = "0.8.1"

postcard = { version = "1.0.8", features = ["use-std"] }

rustc-demangle = "0.1.23"
cilly = {path = "./cilly"}
serde = { version = "1.0.183", features = ["derive"] }


fxhash = "0.2.1"

[profile.dev.package.fxhash]
opt-level = 3
[lib]
crate-type = ["dylib"]

[workspace]
members = [ "cilly",
    "mycorrhiza", 
]
exclude = ["rust/src/bootstrap"]
[profile.release]
debug = true
oom = "panic"
[profile.dev]
oom = "panic"
