[package]
name = "cilly"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0" # MIT or Apache, exactly like the Rust compiler. 
repository = "https://github.com/FractalFir/rustc_codegen_clr"
description = "A tool for creating .NET and optimizing .NET assemblies"
keywords = ["dotnet","assembly","compilers","programing"]
[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
lazy_static = "1.4.0"
postcard = { version = "1.0.6", features = ["use-std"] }
ar = "0.9.0"
[[bin]]
name = "linker"
test = false
bench = false
[[bin]]
name = "interpreter"
test = false
bench = false