[package]
name = "mycorrhiza"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FractalFir/rustc_codegen_clr"
description = "Rust/.NET interop layer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
std = []