[package]
name = "rustc_codgen_clr_operand"
version = "0.1.0"
edition = "2024"

[dependencies]
cilly = {path = "../cilly"}
rustc_codegen_clr_ctx = {path = "../rustc_codegen_clr_ctx"}
rustc_codegen_clr_type = {path = "../rustc_codegen_clr_type"}
rustc_codegen_clr_place = {path = "../rustc_codegen_clr_place"}
rustc_codegen_clr_call = {path = "../rustc_codegen_clr_call"}