[package]
name = "gtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mycorrhiza = {path="../../mycorrhiza"}
glam = { version = "0.24", default-features = false, features = ["libm"] }
[build]
rustflags = [
"-C", "link-arg=--aot-mode=mono_full",
]
[workspace]
